remove buggy blurred image reference

--- a/themes/escoladejornalismo/static/css/enois.less
+++ b/themes/escoladejornalismo/static/css/enois.less
@@ -1240,7 +1240,7 @@ margin-top: -10%;
   border-color: #2b3e52;
 }
 .profile.image .inner {
-  background: url("../_demo/images/profile-background-blurred.png") no-repeat scroll left top / cover transparent;
+  // background: url("../_demo/images/profile-background-blurred.png") no-repeat scroll left top / cover transparent;
 }
 .profile.image .title, .profile.image .footer {
   border-color: #ffffff;
